# pynbis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NIST_DISCLAIMER.txt  README.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
examples/: 01_basic_minutiae_extraction.py  02_fingerprint_matching.py  03_quality_assessment.py  04_one_to_many_matching.py  05_batch_processing.py  06_wsq_decoding.py  README.md
nbis_src/an2k/include/: an2k.h
pynbis/: __init__.py  _nbis_ext.c  core.py  utils.py
pynbis.egg-info/: SOURCES.txt  requires.txt
scripts/: download_socofing.py
tests/: __init__.py  test_core.py
