
[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynbis"
version = "1.0.0"
description = "Python bindings for NBIS (NIST Biometric Image Software) - fingerprint processing library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Public Domain"}
authors = [
    {name = "PyNBIS Contributors"}
]
maintainers = [
    {name = "PyNBIS Contributors"}
]
keywords = [
    "fingerprint",
    "biometrics",
    "NBIS",
    "NIST",
    "minutiae",
    "fingerprint-matching",
    "fingerprint-recognition",
    "bozorth3",
    "mindtct",
    "NFIQ",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
imaging = [
    "Pillow>=9.0.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
]
all = [
    "pynbis[dev,imaging]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pynbis"
Documentation = "https://github.com/yourusername/pynbis#readme"
Repository = "https://github.com/yourusername/pynbis"
Issues = "https://github.com/yourusername/pynbis/issues"

[tool.setuptools]
packages = ["pynbis"]
include-package-data = true

[tool.setuptools.package-data]
pynbis = ["py.typed", "*.so", "*.pyd", "*.dll"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
